--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li>Marketing</li>
     </nav>
     <div class="welcome">
-        <img src="/img/user-avatar-filled-svgrepo-com.svg" alt="">
+        <img src="./img/user-avatar-filled-svgrepo-com.svg" alt="">
         <div class="text">
             <h2>Welcome back, Dang Tuan Vu</h2>
             <p>Add occupation and interests</p>
