--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         <div class="body-right">
             <div class="body-right-1">
-                <img src="/img/fire-svgrepo-com.svg" alt="">
+                <img src="./img/fire-svgrepo-com.svg" alt="">
                 <div>
                     <p>2 Weeks</p>
                     <p>Current streak</p>                    
@@ -38,13 +38,13 @@
             </div>
             <div class="body-right-2">
                 <div class="img-circle">
-                    <img src="/img/circle-svgrepo-com (1).svg" alt="">
+                    <img src="./img/circle-svgrepo-com (1).svg" alt="">
                 </div>
                 <div class="right-text">
                     <div class="text-right-info">
                         <p>11/30 course min</p>
                         <div class="img-info">
-                            <img src="/img/info-circle-svgrepo-com.svg" alt="">
+                            <img src="./img/info-circle-svgrepo-com.svg" alt="">
                         </div>
                     </div>
                     <p>4/1 visit</p>
@@ -67,7 +67,7 @@
         <div class="lesson">
             <a href="">
             <div class="img-lesson">
-                <img src="/img/a27e5ebde4c897aa17648afda091a7eb.jpg" alt="">
+                <img src="./img/a27e5ebde4c897aa17648afda091a7eb.jpg" alt="">
             </div>
             <div class="text-lesson">
                 <div>
@@ -83,7 +83,7 @@
         <div class="lesson">
             <a href="./page2/index.html">
             <div class="img-lesson">
-                <img src="/img/a27e5ebde4c897aa17648afda091a7eb.jpg" alt="">
+                <img src="./img/a27e5ebde4c897aa17648afda091a7eb.jpg" alt="">
             </div>
             <div class="text-lesson">
                 <p>MuleSoft 4.X Complete Guide For Beginners- Hands On Project</p>
@@ -97,7 +97,7 @@
         <div class="lesson">
             <a href="">
             <div class="img-lesson">
-                <img src="/img/a27e5ebde4c897aa17648afda091a7eb.jpg" alt="">
+                <img src="./img/a27e5ebde4c897aa17648afda091a7eb.jpg" alt="">
             </div>
             <div class="text-lesson">
                 <p>FPT_ISMS Refresh Training S2 2024</p>
@@ -117,7 +117,7 @@
         <a href="">
        <div class="sbj">
             <div class="img-page2">
-                <img src="/img/pic1.webp" alt="">
+                <img src="./img/pic1.webp" alt="">
             </div>
             <div class="text-sbj">
                 <h4>Oracle Certified Associate Java Programmer (OCAJP) 1Z0-808</h4>
@@ -126,11 +126,11 @@
             <div class="report">
                 <h4>4.6</h4>
                 <div class="img-star">
-                    <img src="/img/bookmark-favorite-rating-star-svgrepo-com.svg" alt="">
-                    <img src="/img/bookmark-favorite-rating-star-svgrepo-com.svg" alt="">
-                    <img src="/img/bookmark-favorite-rating-star-svgrepo-com.svg" alt="">
-                    <img src="/img/bookmark-favorite-rating-star-svgrepo-com.svg" alt="">
-                    <img src="/img/half-rating-star-svgrepo-com (1).svg" alt="">
+                    <img src="./img/bookmark-favorite-rating-star-svgrepo-com.svg" alt="">
+                    <img src="./img/bookmark-favorite-rating-star-svgrepo-com.svg" alt="">
+                    <img src="./img/bookmark-favorite-rating-star-svgrepo-com.svg" alt="">
+                    <img src="./img/bookmark-favorite-rating-star-svgrepo-com.svg" alt="">
+                    <img src="./img/half-rating-star-svgrepo-com (1).svg" alt="">
                 </div>
                 <p>(438)</p>
             </div>
@@ -139,7 +139,7 @@
         <a href="">
        <div class="sbj">
             <div class="img-page2">
-                <img src="/img/pic2.webp" alt="">
+                <img src="./img/pic2.webp" alt="">
             </div>
             <div class="text-sbj">
                 <h4>Oracle Java Certification - Pass the Associate 1Z0-808 Exam</h4>
@@ -148,11 +148,11 @@
             <div class="report">
                 <h4>4.6</h4>
                 <div class="img-star">
-                    <img src="/img/bookmark-favorite-rating-star-svgrepo-com.svg" alt="">
-                    <img src="/img/bookmark-favorite-rating-star-svgrepo-com.svg" alt="">
-                    <img src="/img/bookmark-favorite-rating-star-svgrepo-com.svg" alt="">
-                    <img src="/img/bookmark-favorite-rating-star-svgrepo-com.svg" alt="">
-                    <img src="/img/half-rating-star-svgrepo-com (1).svg" alt="">
+                    <img src="./img/bookmark-favorite-rating-star-svgrepo-com.svg" alt="">
+                    <img src="./img/bookmark-favorite-rating-star-svgrepo-com.svg" alt="">
+                    <img src="./img/bookmark-favorite-rating-star-svgrepo-com.svg" alt="">
+                    <img src="./img/bookmark-favorite-rating-star-svgrepo-com.svg" alt="">
+                    <img src="./img/half-rating-star-svgrepo-com (1).svg" alt="">
                 </div>
                 <p>(5,906)</p>
             </div>
@@ -161,7 +161,7 @@
         <a href="">
        <div class="sbj">
             <div class="img-page2">
-                <img src="/img/pic3.webp" alt="">
+                <img src="./img/pic3.webp" alt="">
             </div>
             <div class="text-sbj">
                 <h4>Complete Java SE 8 Developer Bootcamp - OCA Prep Included</h4>
@@ -170,11 +170,11 @@
             <div class="report">
                 <h4>4.6</h4>
                 <div class="img-star">
-                    <img src="/img/bookmark-favorite-rating-star-svgrepo-com.svg" alt="">
-                    <img src="/img/bookmark-favorite-rating-star-svgrepo-com.svg" alt="">
-                    <img src="/img/bookmark-favorite-rating-star-svgrepo-com.svg" alt="">
-                    <img src="/img/bookmark-favorite-rating-star-svgrepo-com.svg" alt="">
-                    <img src="/img/half-rating-star-svgrepo-com (1).svg" alt="">
+                    <img src="./img/bookmark-favorite-rating-star-svgrepo-com.svg" alt="">
+                    <img src="./img/bookmark-favorite-rating-star-svgrepo-com.svg" alt="">
+                    <img src="./img/bookmark-favorite-rating-star-svgrepo-com.svg" alt="">
+                    <img src="./img/bookmark-favorite-rating-star-svgrepo-com.svg" alt="">
+                    <img src="./img/half-rating-star-svgrepo-com (1).svg" alt="">
                 </div>
                 <p>(9,726)</p>
             </div>
@@ -183,7 +183,7 @@
         <a href="">
         <div class="sbj">
             <div class="img-page2">
-                <img src="/img/pic4new.webp" alt="">
+                <img src="./img/pic4new.webp" alt="">
             </div>
             <div class="text-sbj">
                 <h4>Spring Professional Certification Exam Tutorial - Module 02</h4>
@@ -192,11 +192,11 @@
             <div class="report">
                 <h4>4.6</h4>
                 <div class="img-star">
-                    <img src="/img/bookmark-favorite-rating-star-svgrepo-com.svg" alt="">
-                    <img src="/img/bookmark-favorite-rating-star-svgrepo-com.svg" alt="">
-                    <img src="/img/bookmark-favorite-rating-star-svgrepo-com.svg" alt="">
-                    <img src="/img/bookmark-favorite-rating-star-svgrepo-com.svg" alt="">
-                    <img src="/img/half-rating-star-svgrepo-com (1).svg" alt="">
+                    <img src="./img/bookmark-favorite-rating-star-svgrepo-com.svg" alt="">
+                    <img src="./img/bookmark-favorite-rating-star-svgrepo-com.svg" alt="">
+                    <img src="./img/bookmark-favorite-rating-star-svgrepo-com.svg" alt="">
+                    <img src="./img/bookmark-favorite-rating-star-svgrepo-com.svg" alt="">
+                    <img src="./img/half-rating-star-svgrepo-com (1).svg" alt="">
                 </div>
                 <p>(1,121)</p>
             </div>
@@ -204,7 +204,7 @@
         </a>
    </div>
    <div class="footer-page2">
-        <img src="/img/avatar-default-svgrepo-com.svg" alt="">
+        <img src="./img/avatar-default-svgrepo-com.svg" alt="">
         <h3>Personalize your learning experience</h3>
         <p>Add your occupation and interests to get better content recommendations</p>
         <button>Add occupation and interests</button>
