--- a/index.html
+++ b/index.html
@@ -414,6 +414,7 @@
         display: flex;
         gap: 10px;
         align-items: center;
+        padding: 0 5px;
     }
     .img-star {
         display: flex;
