--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <div class="js-body padding" id="design" style="display: none;">
             <h1>Design</h1>
             <div class="image-container">
-            <img id="image-to-download" src="../img/Req1 (1).png" alt="Example Image">
-            <img id="image-to-download" src="../img/Req2.png" alt="Example Image">
+            <img id="image-to-download" src="./img/Req1 (1).png" alt="Example Image">
+            <img id="image-to-download" src="./img/Req2.png" alt="Example Image">
             </div>
             <a href="https://via.placeholder.com/300" download="example-image.jpg" class="download-button">Download Image</a>
         </div>  
